description readablity